RESOLVED FIXED276369
H265 WebRTC negotiation sometimes fails
https://bugs.webkit.org/show_bug.cgi?id=276369
Summary H265 WebRTC negotiation sometimes fails
youenn fablet
Reported 2024-07-09 09:18:15 PDT
See https://jsfiddle.net/dwx3og1u/, H265 ftmp lines are now processed and may break negotiation. Removing it as in test2 fixes the issue. We might want to be more precise in our H265 decoder support exposure.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-09 09:18:30 PDT
youenn fablet
Comment 2 2024-07-11 08:19:50 PDT
EWS
Comment 3 2024-07-11 09:22:36 PDT
Committed 280863@main (7aac03437a36): <https://commits.webkit.org/280863@main> Reviewed commits have been landed. Closing PR #30699 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.