H265 WebRTC negotiation sometimes fails https://bugs.webkit.org/show_bug.cgi?id=276369 rdar://131388275

Reviewed by Eric Carlson.

After the resync to M126, libwebrtc is now matching HEVC codec profiles.
We revert to the past behavior by disabling the precise checks if one of the codec has no parameter.
https://bugs.webkit.org/show_bug.cgi?id=276486 will handle the population of the decoder/encoder factories to handle the proper negotiation.

* Source/ThirdParty/libwebrtc/Source/webrtc/api/video_codecs/h265_profile_tier_level.cc:

Canonical link: https://commits.webkit.org/280863@main