Source/ThirdParty/libwebrtc/Source/webrtc/api/video_codecs/h265_profile_tier_level.cc
@@ -274,6 +274,12 @@ absl::optional<H265ProfileTierLevel> ParseSdpForH265ProfileTierLevel(
 
 bool H265IsSameProfileTierLevel(const CodecParameterMap& params1,
                                 const CodecParameterMap& params2) {
+#if WEBRTC_WEBKIT_BUILD
+  // FIXME: https://bugs.webkit.org/show_bug.cgi?id=276486.
+  // Populate encoder and decoder factories to properly support negotiation.
+  if (!params1.size() || !params2.size())
+      return true;
+#endif
   const absl::optional<H265ProfileTierLevel> ptl1 =
       ParseSdpForH265ProfileTierLevel(params1);
   const absl::optional<H265ProfileTierLevel> ptl2 =
